--- a/styles/style.scss
+++ b/styles/style.scss
@@ -10,6 +10,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	overflow-x: hidden;
+	background-color: red;
 
 	* {
 		font-family: 'Open Sans', sans-serif;
