--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,2 +1,21 @@
-:root {
-}
+$xs: 400px;
+$sm: 550px;
+$md: 750px;
+$lg: 950px;
+$xl: 1200px;
+
+$text: #595958;
+$light-text: #262626;
+$stroke: #e5e5e3;
+$border: #d1d1d1;
+$gray: #fafaf7;
+$black: #111111;
+$error: #ff7272;
+$warning: #ffbd5d;
+$info: #26b6cf;
+$tan: #b9b39f;
+$dark-tan: #d9d6c9;
+$blue: #307296;
+$primary: $blue;
+
+$padding: 16px;
