--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Roboto:wght@100;300;400;700;900&display=swap');
 @import '_reset.scss';
 @import '_variables.scss';
+@import '_skeleton.scss';
 @import '_map.scss';
 
 body {
@@ -10,7 +11,6 @@ body {
 	justify-content: center;
 	align-items: center;
 	overflow-x: hidden;
-	background-color: red;
 
 	* {
 		font-family: 'Open Sans', sans-serif;
