--- a/styles/style.scss
+++ b/styles/style.scss
@@ -11,11 +11,8 @@ body {
 	justify-content: center;
 	align-items: center;
 	overflow-x: hidden;
-
-	* {
-		font-family: 'Open Sans', sans-serif;
-		font-family: 'Roboto', sans-serif;
-	}
+	font-family: 'PT Sans Narrow';
+	background-color: $tan;
 
 	p {
 		font-size: 40px;
