Add fadeout animation

--- a/styles/_animate.scss
+++ b/styles/_animate.scss
@@ -4134,7 +4134,7 @@
     transform: translate(-50%, -100%);
   }
 }
-.animate__fadeInDown__absolute {
-  -webkit-animation-name: fadeInDownAbsolute;
-  animation-name: fadeInDownAbsolute;
+.animate__fadeOutUp__absolute {
+  -webkit-animation-name: fadeOutUpAbsolute;
+  animation-name: fadeOutUpAbsolute;
 }
