--- a/styles/style.scss
+++ b/styles/style.scss
@@ -13,9 +13,7 @@
 body {
 	width: 100vw;
 	height: 100vh;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	overflow-x: hidden;
+	position: relative;
+	overflow: hidden;
 	font-family: 'PT Sans Narrow';
 }
