--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -1,7 +1,6 @@
 .modal {
 	width: calc(100% - #{$padding * 2});
 	max-width: $md;
-	max-height: calc(100vh - 100px);
 	position: absolute;
 	top: -200%;
 	left: 50%;
@@ -24,6 +23,11 @@
 		}
 	}
 
+	&__header,
+	&__footer {
+		height: 80px;
+	}
+
 	&__body {
 		.row {
 			position: relative;
@@ -31,7 +35,8 @@
 			&::after {
 				content: '';
 				width: 25px;
-				height: 300px;
+				height: calc(100vh - 200px);
+				max-height: 600px;
 				position: absolute;
 				top: 0;
 				right: 0;
@@ -52,7 +57,8 @@
 
 		&-item {
 			width: auto;
-			height: 300px;
+			height: calc(100vh - 200px);
+			max-height: 600px;
 			display: inline-block;
 			padding: 0 10px;
 
