--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -18,14 +18,19 @@
 	}
 
 	&__header {
-		h2 {
+		.col-xs-12 {
+			overflow: hidden;
+		}
+
+		h4 {
 			margin-bottom: 0;
+			white-space: nowrap;
 		}
 	}
 
 	&__header,
 	&__footer {
-		height: 80px;
+		height: 75px;
 	}
 
 	&__body {
@@ -35,7 +40,8 @@
 			&::after {
 				content: '';
 				width: 25px;
-				height: calc(100vh - 200px);
+				height: calc(100vh - 450px);
+				min-height: 180px;
 				max-height: 600px;
 				position: absolute;
 				top: 0;
@@ -76,7 +82,7 @@
 				display: block;
 			}
 
-			p {
+			h6 {
 				margin-top: calc($padding / 2);
 			}
 		}
