--- a/styles/_viewer.scss
+++ b/styles/_viewer.scss
@@ -6,4 +6,32 @@
 	left: 0;
 	z-index: 9;
 	background-color: #fff;
+
+	&__media {
+		width: 100%;
+		height: 100%;
+
+		&-item {
+			position: relative;
+
+			img {
+				width: 100%;
+				height: 100%;
+				display: block;
+				object-fit: cover;
+			}
+
+			div {
+				position: absolute;
+				bottom: $padding;
+				right: $padding;
+				padding: $padding;
+				background-color: rgba(255, 255, 255, 0.5);
+
+				p:empty {
+					display: none;
+				}
+			}
+		}
+	}
 }
