--- a/styles/_viewer.scss
+++ b/styles/_viewer.scss
@@ -71,6 +71,30 @@
 		width: 100%;
 		height: 100%;
 
+		&-loading {
+			width: 100%;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			text-align: center;
+			padding: $padding;
+
+			h1,
+			p {
+				margin: 0;
+				text-align: center;
+				color: #fff;
+			}
+
+			h1 {
+			}
+
+			p {
+				font-size: 22px;
+			}
+		}
+
 		&-item {
 			position: relative;
 
